@@ -1,3 +1,9 @@
+2007-03-02  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* libstetic/ObjectReader.cs, libstetic/wrapper/Container.cs: Fixed
+	  issues with internal children when importing a glade file.
+	* libstetic/GladeUtils.cs: Use invariant culture to parse floats.
+
 2007-02-20  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* libsteticui/ActionGroupEditSession.cs: Added null check.
